[package]
name = "better-interval-timer"
version = "0.1.0"
authors = ["Sebastian Rugina <dev@srugina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
schedule_recv = "0.1.0"
figlet-rs = "0.1.3"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
